modified cv and small adjustments to university degree title

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree - First Class Honours</p>
+              <p>BSc(Hons) Bachelors Degree - First Class Honours</p>
               <p>University College Birmingham</p>
             </div>
           </div>
