--- a/index.html
+++ b/index.html
@@ -230,16 +230,16 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/Number_guesser.jpg"
+                src="./assets/calculator.png"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Number Guesser</h2>
+            <h2 class="experience-sub-title project-title">HTML-CSS-JavaScript Calculator</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/saaycon/Number-Guesser'"
+                onclick="location.href='https://github.com/saaycon/calculator'"
               >
                 Github
               </button>
