modified cv and added a live demo button to showcase the first project

--- a/index.html
+++ b/index.html
@@ -243,6 +243,12 @@
               >
                 Github
               </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://htmlcssjavascritpcalculator.netlify.app/'"
+              >
+                Live Demo
+              </button>
             </div>
           </div>
           <div class="details-container color-container">
