--- a/index.html
+++ b/index.html
@@ -174,7 +174,29 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SQL</h3>
+                  <h3>MySQL</h3>
+                  <p>Beginner</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>C#</h3>
+                  <p>Beginner</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>.NET</h3>
                   <p>Beginner</p>
                 </div>
               </article>
