--- a/index.html
+++ b/index.html
@@ -275,9 +275,14 @@
           </div>
           <div class="details-container color-container">
             <div class="article-container">
+              <img
+                src="./assets/Calendar.png"
+                alt="Project 2"
+                class="project-img"
+              />
 
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">Calendar Web App</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
