--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/Calendar.png"
+                src="./assets/Calendar.jpg"
                 alt="Project 2"
                 class="project-img"
               />
@@ -286,7 +286,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/saaycon/'"
+                onclick="location.href='https://github.com/saaycon/calendar-project/'"
               >
                 Github
               </button>
