modifiet image type

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/Calendar.jpg"
+                src="./assets/Calendar.png"
                 alt="Project 2"
                 class="project-img"
               />
