--- a/index.html
+++ b/index.html
@@ -49,10 +49,7 @@
             class="btn btn-color-2"
             onclick="window.open('./assets/Razvan-Craciun-CV.pdf')"
           >
-            Download CV
-          </button>
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
-            Contact Info
+            Download my CV!
           </button>
         </div>
         <div id="socials-container">
